examples/tests/invalid/file_with_variables.w
// used by bring_local_variables.w

bring cloud;

let x = 5;
let y = ["hello", "world"];
let z = new cloud.Bucket();

class Bar {}

throw("dummy error");
